LexerParser/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> update_statement
Rule 2     statement -> select_statement
Rule 3     statement -> delete_statement
Rule 4     statement -> description_statement
Rule 5     update_statement -> UPDATE ID SET set_clause_list EOL
Rule 6     update_statement -> UPDATE ID SET set_clause_list WHERE search_condition EOL
Rule 7     select_statement -> SELECT select_columns FROM id_list EOL
Rule 8     select_statement -> SELECT select_columns FROM id_list join_clause EOL
Rule 9     select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL
Rule 10    select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
Rule 11    delete_statement -> DELETE ALL FROM ID EOL
Rule 12    delete_statement -> DELETE FROM ID EOL
Rule 13    delete_statement -> DELETE FROM ID WHERE search_condition EOL
Rule 14    description_statement -> DESC ID EOL
Rule 15    select_columns -> ALL
Rule 16    select_columns -> id_list
Rule 17    set_clause_list -> col_value EQ col_value
Rule 18    set_clause_list -> col_value EQ col_value COMMA set_clause_list
Rule 19    join_clause -> NATURAL JOIN ID
Rule 20    join_clause -> NATURAL JOIN ID join_clause
Rule 21    join_clause -> join_list
Rule 22    join_clause -> join_list ON col_value comp_op col_value
Rule 23    join_clause -> join_list ON col_value comp_op col_value join_clause
Rule 24    join_clause -> join_list ON col_value comp_op col_value join_search_condition
Rule 25    join_list -> JOIN ID
Rule 26    join_list -> JOIN ID join_list
Rule 27    col_value -> ID
Rule 28    col_value -> ID DOT ID
Rule 29    col_value -> literal
Rule 30    join_search_condition -> AND join_search_condition
Rule 31    join_search_condition -> OR join_search_condition
Rule 32    join_search_condition -> LPAREN join_search_condition RPAREN
Rule 33    join_search_condition -> comparison_predicate
Rule 34    search_condition -> search_condition OR search_condition
Rule 35    search_condition -> search_condition AND search_condition
Rule 36    search_condition -> LPAREN search_condition RPAREN
Rule 37    search_condition -> comparison_predicate
Rule 38    comparison_predicate -> value comp_op value
Rule 39    comp_op -> EQ
Rule 40    comp_op -> NEQ
Rule 41    comp_op -> GT
Rule 42    comp_op -> LT
Rule 43    id_list -> ID
Rule 44    id_list -> ID DOT ID
Rule 45    id_list -> id_list COMMA ID
Rule 46    id_list -> id_list COMMA ID DOT ID
Rule 47    inner_select_statement -> SELECT select_columns FROM id_list
Rule 48    inner_select_statement -> SELECT select_columns FROM id_list join_clause
Rule 49    inner_select_statement -> SELECT select_columns FROM id_list WHERE search_condition
Rule 50    inner_select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition
Rule 51    value -> ID
Rule 52    value -> ID DOT ID
Rule 53    value -> literal
Rule 54    value -> LPAREN inner_select_statement RPAREN
Rule 55    literal -> INT
Rule 56    literal -> INT DOT INT
Rule 57    literal -> STRING

Terminals, with rules where they appear

ALL                  : 11 15
AND                  : 30 35
COMMA                : 18 45 46
DELETE               : 11 12 13
DESC                 : 14
DOT                  : 28 44 46 52 56
EOL                  : 5 6 7 8 9 10 11 12 13 14
EQ                   : 17 18 39
FROM                 : 7 8 9 10 11 12 13 47 48 49 50
GT                   : 41
ID                   : 5 6 11 12 13 14 19 20 25 26 27 28 28 43 44 44 45 46 46 51 52 52
INT                  : 55 56 56
JOIN                 : 19 20 25 26
LPAREN               : 32 36 54
LT                   : 42
NATURAL              : 19 20
NEQ                  : 40
ON                   : 22 23 24
OR                   : 31 34
RPAREN               : 32 36 54
SELECT               : 7 8 9 10 47 48 49 50
SET                  : 5 6
STRING               : 57
UPDATE               : 5 6
WHERE                : 6 9 10 13 49 50
error                : 

Nonterminals, with rules where they appear

col_value            : 17 17 18 18 22 22 23 23 24 24
comp_op              : 22 23 24 38
comparison_predicate : 33 37
delete_statement     : 3
description_statement : 4
id_list              : 7 8 9 10 16 45 46 47 48 49 50
inner_select_statement : 54
join_clause          : 8 10 20 23 48 50
join_list            : 21 22 23 24 26
join_search_condition : 24 30 31 32
literal              : 29 53
search_condition     : 6 9 10 13 34 34 35 35 36 49 50
select_columns       : 7 8 9 10 47 48 49 50
select_statement     : 2
set_clause_list      : 5 6 18
statement            : 0
update_statement     : 1
value                : 38 38

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . update_statement
    (2) statement -> . select_statement
    (3) statement -> . delete_statement
    (4) statement -> . description_statement
    (5) update_statement -> . UPDATE ID SET set_clause_list EOL
    (6) update_statement -> . UPDATE ID SET set_clause_list WHERE search_condition EOL
    (7) select_statement -> . SELECT select_columns FROM id_list EOL
    (8) select_statement -> . SELECT select_columns FROM id_list join_clause EOL
    (9) select_statement -> . SELECT select_columns FROM id_list WHERE search_condition EOL
    (10) select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
    (11) delete_statement -> . DELETE ALL FROM ID EOL
    (12) delete_statement -> . DELETE FROM ID EOL
    (13) delete_statement -> . DELETE FROM ID WHERE search_condition EOL
    (14) description_statement -> . DESC ID EOL

    UPDATE          shift and go to state 6
    SELECT          shift and go to state 1
    DELETE          shift and go to state 4
    DESC            shift and go to state 8

    statement                      shift and go to state 5
    update_statement               shift and go to state 2
    select_statement               shift and go to state 7
    description_statement          shift and go to state 3
    delete_statement               shift and go to state 9

state 1

    (7) select_statement -> SELECT . select_columns FROM id_list EOL
    (8) select_statement -> SELECT . select_columns FROM id_list join_clause EOL
    (9) select_statement -> SELECT . select_columns FROM id_list WHERE search_condition EOL
    (10) select_statement -> SELECT . select_columns FROM id_list join_clause WHERE search_condition EOL
    (15) select_columns -> . ALL
    (16) select_columns -> . id_list
    (43) id_list -> . ID
    (44) id_list -> . ID DOT ID
    (45) id_list -> . id_list COMMA ID
    (46) id_list -> . id_list COMMA ID DOT ID

    ALL             shift and go to state 10
    ID              shift and go to state 12

    select_columns                 shift and go to state 11
    id_list                        shift and go to state 13

state 2

    (1) statement -> update_statement .

    $end            reduce using rule 1 (statement -> update_statement .)


state 3

    (4) statement -> description_statement .

    $end            reduce using rule 4 (statement -> description_statement .)


state 4

    (11) delete_statement -> DELETE . ALL FROM ID EOL
    (12) delete_statement -> DELETE . FROM ID EOL
    (13) delete_statement -> DELETE . FROM ID WHERE search_condition EOL

    ALL             shift and go to state 15
    FROM            shift and go to state 14


state 5

    (0) S' -> statement .



state 6

    (5) update_statement -> UPDATE . ID SET set_clause_list EOL
    (6) update_statement -> UPDATE . ID SET set_clause_list WHERE search_condition EOL

    ID              shift and go to state 16


state 7

    (2) statement -> select_statement .

    $end            reduce using rule 2 (statement -> select_statement .)


state 8

    (14) description_statement -> DESC . ID EOL

    ID              shift and go to state 17


state 9

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 10

    (15) select_columns -> ALL .

    FROM            reduce using rule 15 (select_columns -> ALL .)


state 11

    (7) select_statement -> SELECT select_columns . FROM id_list EOL
    (8) select_statement -> SELECT select_columns . FROM id_list join_clause EOL
    (9) select_statement -> SELECT select_columns . FROM id_list WHERE search_condition EOL
    (10) select_statement -> SELECT select_columns . FROM id_list join_clause WHERE search_condition EOL

    FROM            shift and go to state 18


state 12

    (43) id_list -> ID .
    (44) id_list -> ID . DOT ID

    EOL             reduce using rule 43 (id_list -> ID .)
    WHERE           reduce using rule 43 (id_list -> ID .)
    COMMA           reduce using rule 43 (id_list -> ID .)
    NATURAL         reduce using rule 43 (id_list -> ID .)
    JOIN            reduce using rule 43 (id_list -> ID .)
    FROM            reduce using rule 43 (id_list -> ID .)
    RPAREN          reduce using rule 43 (id_list -> ID .)
    DOT             shift and go to state 19


state 13

    (16) select_columns -> id_list .
    (45) id_list -> id_list . COMMA ID
    (46) id_list -> id_list . COMMA ID DOT ID

    FROM            reduce using rule 16 (select_columns -> id_list .)
    COMMA           shift and go to state 20


state 14

    (12) delete_statement -> DELETE FROM . ID EOL
    (13) delete_statement -> DELETE FROM . ID WHERE search_condition EOL

    ID              shift and go to state 21


state 15

    (11) delete_statement -> DELETE ALL . FROM ID EOL

    FROM            shift and go to state 22


state 16

    (5) update_statement -> UPDATE ID . SET set_clause_list EOL
    (6) update_statement -> UPDATE ID . SET set_clause_list WHERE search_condition EOL

    SET             shift and go to state 23


state 17

    (14) description_statement -> DESC ID . EOL

    EOL             shift and go to state 24


state 18

    (7) select_statement -> SELECT select_columns FROM . id_list EOL
    (8) select_statement -> SELECT select_columns FROM . id_list join_clause EOL
    (9) select_statement -> SELECT select_columns FROM . id_list WHERE search_condition EOL
    (10) select_statement -> SELECT select_columns FROM . id_list join_clause WHERE search_condition EOL
    (43) id_list -> . ID
    (44) id_list -> . ID DOT ID
    (45) id_list -> . id_list COMMA ID
    (46) id_list -> . id_list COMMA ID DOT ID

    ID              shift and go to state 12

    id_list                        shift and go to state 25

state 19

    (44) id_list -> ID DOT . ID

    ID              shift and go to state 26


state 20

    (45) id_list -> id_list COMMA . ID
    (46) id_list -> id_list COMMA . ID DOT ID

    ID              shift and go to state 27


state 21

    (12) delete_statement -> DELETE FROM ID . EOL
    (13) delete_statement -> DELETE FROM ID . WHERE search_condition EOL

    EOL             shift and go to state 29
    WHERE           shift and go to state 28


state 22

    (11) delete_statement -> DELETE ALL FROM . ID EOL

    ID              shift and go to state 30


state 23

    (5) update_statement -> UPDATE ID SET . set_clause_list EOL
    (6) update_statement -> UPDATE ID SET . set_clause_list WHERE search_condition EOL
    (17) set_clause_list -> . col_value EQ col_value
    (18) set_clause_list -> . col_value EQ col_value COMMA set_clause_list
    (27) col_value -> . ID
    (28) col_value -> . ID DOT ID
    (29) col_value -> . literal
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    ID              shift and go to state 33
    INT             shift and go to state 36
    STRING          shift and go to state 35

    set_clause_list                shift and go to state 34
    col_value                      shift and go to state 31
    literal                        shift and go to state 32

state 24

    (14) description_statement -> DESC ID EOL .

    $end            reduce using rule 14 (description_statement -> DESC ID EOL .)


state 25

    (7) select_statement -> SELECT select_columns FROM id_list . EOL
    (8) select_statement -> SELECT select_columns FROM id_list . join_clause EOL
    (9) select_statement -> SELECT select_columns FROM id_list . WHERE search_condition EOL
    (10) select_statement -> SELECT select_columns FROM id_list . join_clause WHERE search_condition EOL
    (45) id_list -> id_list . COMMA ID
    (46) id_list -> id_list . COMMA ID DOT ID
    (19) join_clause -> . NATURAL JOIN ID
    (20) join_clause -> . NATURAL JOIN ID join_clause
    (21) join_clause -> . join_list
    (22) join_clause -> . join_list ON col_value comp_op col_value
    (23) join_clause -> . join_list ON col_value comp_op col_value join_clause
    (24) join_clause -> . join_list ON col_value comp_op col_value join_search_condition
    (25) join_list -> . JOIN ID
    (26) join_list -> . JOIN ID join_list

    EOL             shift and go to state 39
    WHERE           shift and go to state 40
    COMMA           shift and go to state 20
    NATURAL         shift and go to state 37
    JOIN            shift and go to state 41

    join_list                      shift and go to state 42
    join_clause                    shift and go to state 38

state 26

    (44) id_list -> ID DOT ID .

    EOL             reduce using rule 44 (id_list -> ID DOT ID .)
    WHERE           reduce using rule 44 (id_list -> ID DOT ID .)
    COMMA           reduce using rule 44 (id_list -> ID DOT ID .)
    NATURAL         reduce using rule 44 (id_list -> ID DOT ID .)
    JOIN            reduce using rule 44 (id_list -> ID DOT ID .)
    FROM            reduce using rule 44 (id_list -> ID DOT ID .)
    RPAREN          reduce using rule 44 (id_list -> ID DOT ID .)


state 27

    (45) id_list -> id_list COMMA ID .
    (46) id_list -> id_list COMMA ID . DOT ID

    EOL             reduce using rule 45 (id_list -> id_list COMMA ID .)
    WHERE           reduce using rule 45 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 45 (id_list -> id_list COMMA ID .)
    NATURAL         reduce using rule 45 (id_list -> id_list COMMA ID .)
    JOIN            reduce using rule 45 (id_list -> id_list COMMA ID .)
    FROM            reduce using rule 45 (id_list -> id_list COMMA ID .)
    RPAREN          reduce using rule 45 (id_list -> id_list COMMA ID .)
    DOT             shift and go to state 43


state 28

    (13) delete_statement -> DELETE FROM ID WHERE . search_condition EOL
    (34) search_condition -> . search_condition OR search_condition
    (35) search_condition -> . search_condition AND search_condition
    (36) search_condition -> . LPAREN search_condition RPAREN
    (37) search_condition -> . comparison_predicate
    (38) comparison_predicate -> . value comp_op value
    (51) value -> . ID
    (52) value -> . ID DOT ID
    (53) value -> . literal
    (54) value -> . LPAREN inner_select_statement RPAREN
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    LPAREN          shift and go to state 49
    ID              shift and go to state 46
    INT             shift and go to state 36
    STRING          shift and go to state 35

    search_condition               shift and go to state 48
    comparison_predicate           shift and go to state 45
    literal                        shift and go to state 44
    value                          shift and go to state 47

state 29

    (12) delete_statement -> DELETE FROM ID EOL .

    $end            reduce using rule 12 (delete_statement -> DELETE FROM ID EOL .)


state 30

    (11) delete_statement -> DELETE ALL FROM ID . EOL

    EOL             shift and go to state 50


state 31

    (17) set_clause_list -> col_value . EQ col_value
    (18) set_clause_list -> col_value . EQ col_value COMMA set_clause_list

    EQ              shift and go to state 51


state 32

    (29) col_value -> literal .

    EQ              reduce using rule 29 (col_value -> literal .)
    NATURAL         reduce using rule 29 (col_value -> literal .)
    AND             reduce using rule 29 (col_value -> literal .)
    OR              reduce using rule 29 (col_value -> literal .)
    LPAREN          reduce using rule 29 (col_value -> literal .)
    JOIN            reduce using rule 29 (col_value -> literal .)
    ID              reduce using rule 29 (col_value -> literal .)
    INT             reduce using rule 29 (col_value -> literal .)
    STRING          reduce using rule 29 (col_value -> literal .)
    EOL             reduce using rule 29 (col_value -> literal .)
    WHERE           reduce using rule 29 (col_value -> literal .)
    RPAREN          reduce using rule 29 (col_value -> literal .)
    COMMA           reduce using rule 29 (col_value -> literal .)
    NEQ             reduce using rule 29 (col_value -> literal .)
    GT              reduce using rule 29 (col_value -> literal .)
    LT              reduce using rule 29 (col_value -> literal .)


state 33

    (27) col_value -> ID .
    (28) col_value -> ID . DOT ID

    EQ              reduce using rule 27 (col_value -> ID .)
    NATURAL         reduce using rule 27 (col_value -> ID .)
    AND             reduce using rule 27 (col_value -> ID .)
    OR              reduce using rule 27 (col_value -> ID .)
    LPAREN          reduce using rule 27 (col_value -> ID .)
    JOIN            reduce using rule 27 (col_value -> ID .)
    ID              reduce using rule 27 (col_value -> ID .)
    INT             reduce using rule 27 (col_value -> ID .)
    STRING          reduce using rule 27 (col_value -> ID .)
    EOL             reduce using rule 27 (col_value -> ID .)
    WHERE           reduce using rule 27 (col_value -> ID .)
    RPAREN          reduce using rule 27 (col_value -> ID .)
    COMMA           reduce using rule 27 (col_value -> ID .)
    NEQ             reduce using rule 27 (col_value -> ID .)
    GT              reduce using rule 27 (col_value -> ID .)
    LT              reduce using rule 27 (col_value -> ID .)
    DOT             shift and go to state 52


state 34

    (5) update_statement -> UPDATE ID SET set_clause_list . EOL
    (6) update_statement -> UPDATE ID SET set_clause_list . WHERE search_condition EOL

    EOL             shift and go to state 54
    WHERE           shift and go to state 53


state 35

    (57) literal -> STRING .

    EQ              reduce using rule 57 (literal -> STRING .)
    NEQ             reduce using rule 57 (literal -> STRING .)
    GT              reduce using rule 57 (literal -> STRING .)
    LT              reduce using rule 57 (literal -> STRING .)
    COMMA           reduce using rule 57 (literal -> STRING .)
    EOL             reduce using rule 57 (literal -> STRING .)
    WHERE           reduce using rule 57 (literal -> STRING .)
    NATURAL         reduce using rule 57 (literal -> STRING .)
    AND             reduce using rule 57 (literal -> STRING .)
    OR              reduce using rule 57 (literal -> STRING .)
    LPAREN          reduce using rule 57 (literal -> STRING .)
    JOIN            reduce using rule 57 (literal -> STRING .)
    ID              reduce using rule 57 (literal -> STRING .)
    INT             reduce using rule 57 (literal -> STRING .)
    STRING          reduce using rule 57 (literal -> STRING .)
    RPAREN          reduce using rule 57 (literal -> STRING .)


state 36

    (55) literal -> INT .
    (56) literal -> INT . DOT INT

    EQ              reduce using rule 55 (literal -> INT .)
    NEQ             reduce using rule 55 (literal -> INT .)
    GT              reduce using rule 55 (literal -> INT .)
    LT              reduce using rule 55 (literal -> INT .)
    COMMA           reduce using rule 55 (literal -> INT .)
    EOL             reduce using rule 55 (literal -> INT .)
    WHERE           reduce using rule 55 (literal -> INT .)
    NATURAL         reduce using rule 55 (literal -> INT .)
    AND             reduce using rule 55 (literal -> INT .)
    OR              reduce using rule 55 (literal -> INT .)
    LPAREN          reduce using rule 55 (literal -> INT .)
    JOIN            reduce using rule 55 (literal -> INT .)
    ID              reduce using rule 55 (literal -> INT .)
    INT             reduce using rule 55 (literal -> INT .)
    STRING          reduce using rule 55 (literal -> INT .)
    RPAREN          reduce using rule 55 (literal -> INT .)
    DOT             shift and go to state 55


state 37

    (19) join_clause -> NATURAL . JOIN ID
    (20) join_clause -> NATURAL . JOIN ID join_clause

    JOIN            shift and go to state 56


state 38

    (8) select_statement -> SELECT select_columns FROM id_list join_clause . EOL
    (10) select_statement -> SELECT select_columns FROM id_list join_clause . WHERE search_condition EOL

    EOL             shift and go to state 57
    WHERE           shift and go to state 58


state 39

    (7) select_statement -> SELECT select_columns FROM id_list EOL .

    $end            reduce using rule 7 (select_statement -> SELECT select_columns FROM id_list EOL .)


state 40

    (9) select_statement -> SELECT select_columns FROM id_list WHERE . search_condition EOL
    (34) search_condition -> . search_condition OR search_condition
    (35) search_condition -> . search_condition AND search_condition
    (36) search_condition -> . LPAREN search_condition RPAREN
    (37) search_condition -> . comparison_predicate
    (38) comparison_predicate -> . value comp_op value
    (51) value -> . ID
    (52) value -> . ID DOT ID
    (53) value -> . literal
    (54) value -> . LPAREN inner_select_statement RPAREN
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    LPAREN          shift and go to state 49
    ID              shift and go to state 46
    INT             shift and go to state 36
    STRING          shift and go to state 35

    search_condition               shift and go to state 59
    comparison_predicate           shift and go to state 45
    literal                        shift and go to state 44
    value                          shift and go to state 47

state 41

    (25) join_list -> JOIN . ID
    (26) join_list -> JOIN . ID join_list

    ID              shift and go to state 60


state 42

    (21) join_clause -> join_list .
    (22) join_clause -> join_list . ON col_value comp_op col_value
    (23) join_clause -> join_list . ON col_value comp_op col_value join_clause
    (24) join_clause -> join_list . ON col_value comp_op col_value join_search_condition

    WHERE           reduce using rule 21 (join_clause -> join_list .)
    RPAREN          reduce using rule 21 (join_clause -> join_list .)
    EOL             reduce using rule 21 (join_clause -> join_list .)
    ON              shift and go to state 61


state 43

    (46) id_list -> id_list COMMA ID DOT . ID

    ID              shift and go to state 62


state 44

    (53) value -> literal .

    EQ              reduce using rule 53 (value -> literal .)
    NEQ             reduce using rule 53 (value -> literal .)
    GT              reduce using rule 53 (value -> literal .)
    LT              reduce using rule 53 (value -> literal .)
    EOL             reduce using rule 53 (value -> literal .)
    OR              reduce using rule 53 (value -> literal .)
    AND             reduce using rule 53 (value -> literal .)
    RPAREN          reduce using rule 53 (value -> literal .)
    WHERE           reduce using rule 53 (value -> literal .)


state 45

    (37) search_condition -> comparison_predicate .

    OR              reduce using rule 37 (search_condition -> comparison_predicate .)
    AND             reduce using rule 37 (search_condition -> comparison_predicate .)
    EOL             reduce using rule 37 (search_condition -> comparison_predicate .)
    RPAREN          reduce using rule 37 (search_condition -> comparison_predicate .)


state 46

    (51) value -> ID .
    (52) value -> ID . DOT ID

    EQ              reduce using rule 51 (value -> ID .)
    NEQ             reduce using rule 51 (value -> ID .)
    GT              reduce using rule 51 (value -> ID .)
    LT              reduce using rule 51 (value -> ID .)
    EOL             reduce using rule 51 (value -> ID .)
    OR              reduce using rule 51 (value -> ID .)
    AND             reduce using rule 51 (value -> ID .)
    RPAREN          reduce using rule 51 (value -> ID .)
    WHERE           reduce using rule 51 (value -> ID .)
    DOT             shift and go to state 63


state 47

    (38) comparison_predicate -> value . comp_op value
    (39) comp_op -> . EQ
    (40) comp_op -> . NEQ
    (41) comp_op -> . GT
    (42) comp_op -> . LT

    EQ              shift and go to state 66
    NEQ             shift and go to state 68
    GT              shift and go to state 67
    LT              shift and go to state 64

    comp_op                        shift and go to state 65

state 48

    (13) delete_statement -> DELETE FROM ID WHERE search_condition . EOL
    (34) search_condition -> search_condition . OR search_condition
    (35) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 71
    OR              shift and go to state 70
    AND             shift and go to state 69


state 49

    (36) search_condition -> LPAREN . search_condition RPAREN
    (54) value -> LPAREN . inner_select_statement RPAREN
    (34) search_condition -> . search_condition OR search_condition
    (35) search_condition -> . search_condition AND search_condition
    (36) search_condition -> . LPAREN search_condition RPAREN
    (37) search_condition -> . comparison_predicate
    (47) inner_select_statement -> . SELECT select_columns FROM id_list
    (48) inner_select_statement -> . SELECT select_columns FROM id_list join_clause
    (49) inner_select_statement -> . SELECT select_columns FROM id_list WHERE search_condition
    (50) inner_select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition
    (38) comparison_predicate -> . value comp_op value
    (51) value -> . ID
    (52) value -> . ID DOT ID
    (53) value -> . literal
    (54) value -> . LPAREN inner_select_statement RPAREN
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    LPAREN          shift and go to state 49
    SELECT          shift and go to state 72
    ID              shift and go to state 46
    INT             shift and go to state 36
    STRING          shift and go to state 35

    literal                        shift and go to state 44
    search_condition               shift and go to state 73
    comparison_predicate           shift and go to state 45
    inner_select_statement         shift and go to state 74
    value                          shift and go to state 47

state 50

    (11) delete_statement -> DELETE ALL FROM ID EOL .

    $end            reduce using rule 11 (delete_statement -> DELETE ALL FROM ID EOL .)


state 51

    (17) set_clause_list -> col_value EQ . col_value
    (18) set_clause_list -> col_value EQ . col_value COMMA set_clause_list
    (27) col_value -> . ID
    (28) col_value -> . ID DOT ID
    (29) col_value -> . literal
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    ID              shift and go to state 33
    INT             shift and go to state 36
    STRING          shift and go to state 35

    col_value                      shift and go to state 75
    literal                        shift and go to state 32

state 52

    (28) col_value -> ID DOT . ID

    ID              shift and go to state 76


state 53

    (6) update_statement -> UPDATE ID SET set_clause_list WHERE . search_condition EOL
    (34) search_condition -> . search_condition OR search_condition
    (35) search_condition -> . search_condition AND search_condition
    (36) search_condition -> . LPAREN search_condition RPAREN
    (37) search_condition -> . comparison_predicate
    (38) comparison_predicate -> . value comp_op value
    (51) value -> . ID
    (52) value -> . ID DOT ID
    (53) value -> . literal
    (54) value -> . LPAREN inner_select_statement RPAREN
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    LPAREN          shift and go to state 49
    ID              shift and go to state 46
    INT             shift and go to state 36
    STRING          shift and go to state 35

    search_condition               shift and go to state 77
    comparison_predicate           shift and go to state 45
    literal                        shift and go to state 44
    value                          shift and go to state 47

state 54

    (5) update_statement -> UPDATE ID SET set_clause_list EOL .

    $end            reduce using rule 5 (update_statement -> UPDATE ID SET set_clause_list EOL .)


state 55

    (56) literal -> INT DOT . INT

    INT             shift and go to state 78


state 56

    (19) join_clause -> NATURAL JOIN . ID
    (20) join_clause -> NATURAL JOIN . ID join_clause

    ID              shift and go to state 79


state 57

    (8) select_statement -> SELECT select_columns FROM id_list join_clause EOL .

    $end            reduce using rule 8 (select_statement -> SELECT select_columns FROM id_list join_clause EOL .)


state 58

    (10) select_statement -> SELECT select_columns FROM id_list join_clause WHERE . search_condition EOL
    (34) search_condition -> . search_condition OR search_condition
    (35) search_condition -> . search_condition AND search_condition
    (36) search_condition -> . LPAREN search_condition RPAREN
    (37) search_condition -> . comparison_predicate
    (38) comparison_predicate -> . value comp_op value
    (51) value -> . ID
    (52) value -> . ID DOT ID
    (53) value -> . literal
    (54) value -> . LPAREN inner_select_statement RPAREN
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    LPAREN          shift and go to state 49
    ID              shift and go to state 46
    INT             shift and go to state 36
    STRING          shift and go to state 35

    search_condition               shift and go to state 80
    comparison_predicate           shift and go to state 45
    literal                        shift and go to state 44
    value                          shift and go to state 47

state 59

    (9) select_statement -> SELECT select_columns FROM id_list WHERE search_condition . EOL
    (34) search_condition -> search_condition . OR search_condition
    (35) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 81
    OR              shift and go to state 70
    AND             shift and go to state 69


state 60

    (25) join_list -> JOIN ID .
    (26) join_list -> JOIN ID . join_list
    (25) join_list -> . JOIN ID
    (26) join_list -> . JOIN ID join_list

    ON              reduce using rule 25 (join_list -> JOIN ID .)
    EOL             reduce using rule 25 (join_list -> JOIN ID .)
    WHERE           reduce using rule 25 (join_list -> JOIN ID .)
    RPAREN          reduce using rule 25 (join_list -> JOIN ID .)
    JOIN            shift and go to state 41

    join_list                      shift and go to state 82

state 61

    (22) join_clause -> join_list ON . col_value comp_op col_value
    (23) join_clause -> join_list ON . col_value comp_op col_value join_clause
    (24) join_clause -> join_list ON . col_value comp_op col_value join_search_condition
    (27) col_value -> . ID
    (28) col_value -> . ID DOT ID
    (29) col_value -> . literal
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    ID              shift and go to state 33
    INT             shift and go to state 36
    STRING          shift and go to state 35

    col_value                      shift and go to state 83
    literal                        shift and go to state 32

state 62

    (46) id_list -> id_list COMMA ID DOT ID .

    EOL             reduce using rule 46 (id_list -> id_list COMMA ID DOT ID .)
    WHERE           reduce using rule 46 (id_list -> id_list COMMA ID DOT ID .)
    COMMA           reduce using rule 46 (id_list -> id_list COMMA ID DOT ID .)
    NATURAL         reduce using rule 46 (id_list -> id_list COMMA ID DOT ID .)
    JOIN            reduce using rule 46 (id_list -> id_list COMMA ID DOT ID .)
    FROM            reduce using rule 46 (id_list -> id_list COMMA ID DOT ID .)
    RPAREN          reduce using rule 46 (id_list -> id_list COMMA ID DOT ID .)


state 63

    (52) value -> ID DOT . ID

    ID              shift and go to state 84


state 64

    (42) comp_op -> LT .

    ID              reduce using rule 42 (comp_op -> LT .)
    INT             reduce using rule 42 (comp_op -> LT .)
    STRING          reduce using rule 42 (comp_op -> LT .)
    LPAREN          reduce using rule 42 (comp_op -> LT .)


state 65

    (38) comparison_predicate -> value comp_op . value
    (51) value -> . ID
    (52) value -> . ID DOT ID
    (53) value -> . literal
    (54) value -> . LPAREN inner_select_statement RPAREN
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    ID              shift and go to state 46
    LPAREN          shift and go to state 85
    INT             shift and go to state 36
    STRING          shift and go to state 35

    literal                        shift and go to state 44
    value                          shift and go to state 86

state 66

    (39) comp_op -> EQ .

    ID              reduce using rule 39 (comp_op -> EQ .)
    INT             reduce using rule 39 (comp_op -> EQ .)
    STRING          reduce using rule 39 (comp_op -> EQ .)
    LPAREN          reduce using rule 39 (comp_op -> EQ .)


state 67

    (41) comp_op -> GT .

    ID              reduce using rule 41 (comp_op -> GT .)
    INT             reduce using rule 41 (comp_op -> GT .)
    STRING          reduce using rule 41 (comp_op -> GT .)
    LPAREN          reduce using rule 41 (comp_op -> GT .)


state 68

    (40) comp_op -> NEQ .

    ID              reduce using rule 40 (comp_op -> NEQ .)
    INT             reduce using rule 40 (comp_op -> NEQ .)
    STRING          reduce using rule 40 (comp_op -> NEQ .)
    LPAREN          reduce using rule 40 (comp_op -> NEQ .)


state 69

    (35) search_condition -> search_condition AND . search_condition
    (34) search_condition -> . search_condition OR search_condition
    (35) search_condition -> . search_condition AND search_condition
    (36) search_condition -> . LPAREN search_condition RPAREN
    (37) search_condition -> . comparison_predicate
    (38) comparison_predicate -> . value comp_op value
    (51) value -> . ID
    (52) value -> . ID DOT ID
    (53) value -> . literal
    (54) value -> . LPAREN inner_select_statement RPAREN
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    LPAREN          shift and go to state 49
    ID              shift and go to state 46
    INT             shift and go to state 36
    STRING          shift and go to state 35

    search_condition               shift and go to state 87
    comparison_predicate           shift and go to state 45
    literal                        shift and go to state 44
    value                          shift and go to state 47

state 70

    (34) search_condition -> search_condition OR . search_condition
    (34) search_condition -> . search_condition OR search_condition
    (35) search_condition -> . search_condition AND search_condition
    (36) search_condition -> . LPAREN search_condition RPAREN
    (37) search_condition -> . comparison_predicate
    (38) comparison_predicate -> . value comp_op value
    (51) value -> . ID
    (52) value -> . ID DOT ID
    (53) value -> . literal
    (54) value -> . LPAREN inner_select_statement RPAREN
    (55) literal -> . INT
    (56) literal -> . INT DOT INT
    (57) literal -> . STRING

    LPAREN          shift and go to state 49
    ID              shift and go to state 46
    INT             shift and go to state 36
    STRING          shift and go to state 35

    search_condition               shift and go to state 88
    comparison_predicate           shift and go to state 45
    literal                        shift and go to state 44
    value                          shift and go to state 47

state 71

    (13) delete_statement -> DELETE FROM ID WHERE search_condition EOL .

    $end            reduce using rule 13 (delete_statement -> DELETE FROM ID WHERE search_condition EOL .)


state 72
